# django-vite-example

./: .gitignore  README.md  manage.py  package.json  pyproject.toml  vite.config.js
django_vite_example/: asgi.py  settings.py  urls.py  wsgi.py
static/src/css/: style.css
static/src/js/: main.js
templates/: index.html
