[tool.poetry]
name = "django-vite-example"
version = "1.0.0"
description = "A example Django project with Django Vite"
authors = ["MrBin99"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
